<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDF3EF">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/text_frames"
            android:padding="16dp">

            <TextView
                android:id="@+id/inputView"
                style="@style/textStyle"
                android:layout_height="100dp"
                android:gravity="top"
                android:hint="@string/press_any_button"
                android:lines="5"
                android:padding="4dp" />
        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pastBuffer"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="@string/past_from_the_buffer"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonClear"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textSize="16sp" />
        </LinearLayout>


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/text_frames"
            android:padding="16dp">

            <TextView
                android:id="@+id/resultView"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="7"
                android:textIsSelectable="true" />
        </ScrollView>


    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topLayout"
        android:layout_gravity="bottom"
        android:layout_margin="4dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/wordSpace"
                style="@style/buttonStyle"
                android:layout_weight="1"
                android:text="@string/word_space"
                android:textSize="18sp" />

            <Button
                android:id="@+id/letterSpace"
                style="@style/buttonStyle"
                android:layout_weight="1"
                android:text="@string/letter_space"
                android:textSize="18sp" />

            <Button
                android:id="@+id/backspace"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:gravity="top|center"
                android:text="@string/backspace" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/dashButton"
                style="@style/buttonStyle"
                android:layout_weight="1"
                android:text="@string/dash" />

            <Button
                android:id="@+id/dotButton"
                style="@style/buttonStyle"
                android:layout_weight="1"
                android:text="@string/dot" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </TableRow>

    </TableLayout>
</RelativeLayout>